--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         
         <h2> 2-Environnement : </h2>
         <p> cette formation ce fera à cet endroit : </p>
-        <img src="res/espace.jpg" width="50%" >
+        <img src="espace.jpg" width="50%" >
          <p> Avec ces instructeurs: </p>
-         <img src="res/frik.jpg" width="100%">
+         <img src="frik.jpg" width="100%">
          <h2 id="down">3- La plateforme : </h2>
          <p>Les cours et les résumés se trouvent dans la plateforme de <a href="https://ada.gomycode.tn/"> Go My Code </a> </p>
 
