--- a/html.html
+++ b/html.html
@@ -9,7 +9,7 @@
 <br>
 <br>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/3cuFEyHjK2M" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>"
-<video src="res/vid.mp4" autoplay="true" controls="true">
+<video src="vid.mp4" autoplay="true" controls="true">
 </video>
 <button> <a href="index.html">   Revenir vers la page d'acceuil </a> </button>
 </body>
