--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>aaa</title>
+	<link rel="icon" type="image/jpg href="espace.jpg">
 </head>
 <body>
     	<center> <h1> Web Development Program </h1></center>
